# libmref

./: .gitignore  configure.ac  libtool
src/: .gitignore  Makefile.am  b64dec.c  delivery.c  fetch.c  fetchfh.c  fetchfn.c  fielda.c  fieldl.c  init.c  libmref.vers  mref.h  parse.c  readhf.c  search.c  split.c  tcp.c  trace.c  valid.c
test/: Journal  Makefile.am  check-fetch.c  check-fetchm.c  check-search.c  check-valid.c  fetch.test  fetchm.test  mref-fetch.c  mrefs-invalid  mrefs-valid  search.test  valid.test
test/std11-invalid/: 0
test/std11-valid/: 0  1
