AC_INIT([libmref], [0.0])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([src/libmref.vers])
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([
Makefile
src/Makefile
test/Makefile
])

LT_INIT
AM_INIT_AUTOMAKE
AC_REQUIRE_AUX_FILE([tap-driver.sh])
AC_PROG_AWK
AM_PATH_LIBGCRYPT

PKG_CHECK_MODULES([LIBGNUTLS], [gnutls >= 3.0.0])
AC_SUBST([LIBGNUTLS_CFLAGS])
AC_SUBST([LIBGNUTLS_LIBS])

AC_OUTPUT
